--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint-config-next": "13.0.6",
     "eslint-config-prettier": "^8.5.0",
     "firebase": "^9.14.0",
+    "firebase-admin": "^11.4.1",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
