--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "firebase-admin": "^11.4.1",
     "next": "13.0.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "recoil": "^0.7.6"
   },
   "devDependencies": {
     "eslint": "^8.29.0",
