--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-FIREBASE_DATABASE_URL= "https://devter-96289.firebaseio.com"
+FIREBASE_DATABASE_URL= https://devter-96289.firebaseio.com
 ID_URL = http://localhost:3000
