--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "emoji-picker-react": "^4.4.7",
     "firebase": "^9.14.0",
     "firebase-admin": "^11.4.1",
     "next": "13.0.6",
