--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emoji-mart/data": "^1.1.2",
-    "@emoji-mart/react": "^1.1.1",
-    "emoji-mart": "^5.5.2",
+    "emoji-picker-react": "^4.4.7",
     "firebase": "^9.14.0",
     "firebase-admin": "^11.4.1",
     "next": "13.0.6",
